Added fixed sticky footer bar
- ALERT : bootstrap's css has been modified straight away. Should not be case ideally.
- See, https://github.com/twitter/bootstrap/issues/4117 for more. It might break for older iOS devices.
- Added some lorem ipsum text

--- a/www/bootstrap/css/bootstrap-responsive.css
+++ b/www/bootstrap/css/bootstrap-responsive.css
@@ -945,10 +945,15 @@
   }
   .navbar-fixed-bottom {
     margin-top: 20px;
+    position: fixed;
   }
   .navbar-fixed-top .navbar-inner,
   .navbar-fixed-bottom .navbar-inner {
     padding: 5px;
+  }
+  .navbar-fixed-bottom .navbar-inner {
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .navbar .container {
     width: auto;
